--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-Flask
-firebase-admin
-python-dotenv
-google-api-python-client
-pillow
-face-recognition
-numpy
-pymongo
-gridfs
-pillow-heif
+Flask==2.3.3
+firebase-admin==6.4.0
+python-dotenv==1.0.1
+google-api-python-client==2.127.0
+pillow==9.5.0
+pillow-heif==0.12.0
+face_recognition==1.3.0
+numpy==1.23.5
+pymongo==4.6.1
