--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,12 @@
 [phases.setup]
-nixPkgs = ["python311", "pip", "gcc", "g++", "cmake", "libjpeg", "zlib"]
+cmds = [
+  "apt-get update && apt-get install -y python3.11 python3.11-venv python3.11-dev python3-pip build-essential cmake libjpeg-dev zlib1g-dev"
+]
 
 [phases.install]
 cmds = [
-  "python -m venv /opt/venv && . /opt/venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt"
+  "python3.11 -m venv /opt/venv && . /opt/venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt"
 ]
 
 [phases.start]
-cmd = "python app.py"
+cmd = "python3.11 app.py"
